Added utils as a submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "utils/minimpl"]
 	path = utils/minimpl
 	url = https://github.com/vlanore/minimpl.git
+[submodule "utils/bayes_utils"]
+	path = utils/bayes_utils
+	url = git@github.com:vlanore/bayes_utils.git
